crates/gridwell-writer-typst/tests/snapshots/snapshots__rowspan-basic.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, right,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Country]],
    [#text(weight: "bold")[Value]],
    table.hline(stroke: 0.5pt),
  ),
  table.cell(rowspan: 2)[Japan],
  [100],
  [110],
  [Korea],
  [80],
)
