crates/gridwell-writer-typst/tests/snapshots/snapshots__single-column.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto,),
  align: (left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Item]],
    table.hline(stroke: 0.5pt),
  ),
  [First],
  [Second],
  [Third],
)
