crates/gridwell-writer-typst/tests/snapshots/snapshots__single-row.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto, auto,),
  align: (left, left, left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[W]],
    [#text(weight: "bold")[X]],
    [#text(weight: "bold")[Y]],
    [#text(weight: "bold")[Z]],
    table.hline(stroke: 0.5pt),
  ),
  [1],
  [2],
  [3],
  [4],
)
