crates/gridwell-writer-typst/tests/snapshots/snapshots__single-stub.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto,),
  align: (left, right, right,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Region]],
    [#text(weight: "bold")[Sales]],
    [#text(weight: "bold")[Growth]],
    table.hline(stroke: 0.5pt),
  ),
  [East],
  [120],
  [4\%],
  [West],
  [98],
  [2\%],
)
